Fix text overflow in the preview container

--- a/src/components/Previewer/previewer.scss
+++ b/src/components/Previewer/previewer.scss
@@ -5,6 +5,8 @@
 
 .preview-container {
   flex: 1;
+  max-width: 100%;
+  overflow-wrap: break-word;
   height: 70vh;
   background: $beige;
   overflow: scroll;
